MyC/y.output
Terminals unused in grammar

    DOT
    ARR


Grammar

    0 $accept: prog $end

    1 prog: glob_decl_list

    2 glob_decl_list: glob_var_list glob_fun_list

    3 glob_var_list: glob_var_list decl PV
    4              | ε

    5 glob_fun_list: glob_fun_list fun
    6              | fun

    7 fun: type fun_head fun_body

    8 po: PO

    9 fun_head: ID po PF
   10         | ID po params PF

   11 params: type ID vir params
   12       | type ID

   13 vir: VIR

   14 fun_body: fao block faf

   15 fao: AO

   16 faf: AF

   17 block: decl_list inst_list

   18 decl_list: decl_list decl PV
   19          | ε

   20 decl: var_decl

   21 var_decl: type vlist

   22 vlist: vlist vir ID
   23      | ID

   24 type: typename

   25 typename: INT
   26         | FLOAT
   27         | VOID

   28 inst_list: inst_list inst
   29          | inst

   30 pv: PV

   31 inst: ao block af
   32     | exp pv
   33     | aff pv
   34     | ret pv
   35     | cond
   36     | loop
   37     | pv

   38 ao: AO

   39 af: AF

   40 aff: ID EQ exp

   41 ret: RETURN exp
   42    | RETURN PO PF

   43 cond: if bool_cond inst elsop

   44 elsop: else inst
   45      | ε

   46 bool_cond: PO exp PF

   47 if: IF

   48 else: ELSE

   49 loop: while while_cond inst

   50 while_cond: PO exp PF

   51 while: WHILE

   52 exp: MOINS exp
   53    | exp PLUS exp
   54    | exp MOINS exp
   55    | exp STAR exp
   56    | exp DIV exp
   57    | PO exp PF
   58    | ID
   59    | app
   60    | NUM
   61    | DEC
   62    | NOT exp
   63    | exp INF exp
   64    | exp SUP exp
   65    | exp EQUAL exp
   66    | exp DIFF exp
   67    | exp AND exp
   68    | exp OR exp

   69 app: fid PO args PF

   70 fid: ID

   71 args: arglist
   72     | ε

   73 arglist: arglist VIR exp
   74        | exp


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUM <int_value> (258) 60
    DEC <float_value> (259) 61
    INT (260) 25
    FLOAT (261) 26
    VOID (262) 27
    ID <string_value> (263) 9 10 11 12 22 23 40 58 70
    AO (264) 15 38
    AF (265) 16 39
    PO (266) 8 42 46 50 57 69
    PF (267) 9 10 42 46 50 57 69
    PV (268) 3 18 30
    VIR (269) 13 73
    RETURN (270) 41 42
    EQ (271) 40
    IF <label_value> (272) 47
    ELSE <label_value> (273) 48
    WHILE <label_value> (274) 51
    AND <label_value> (275) 67
    OR <label_value> (276) 68
    NOT <label_value> (277) 62
    DIFF <label_value> (278) 66
    EQUAL <label_value> (279) 65
    SUP <label_value> (280) 64
    INF <label_value> (281) 63
    PLUS (282) 53
    MOINS (283) 52 54
    STAR (284) 55
    DIV (285) 56
    DOT (286)
    ARR (287)
    IFX (288)
    UNA (289)


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    prog (36)
        on left: 1
        on right: 0
    glob_decl_list (37)
        on left: 2
        on right: 1
    glob_var_list (38)
        on left: 3 4
        on right: 2 3
    glob_fun_list (39)
        on left: 5 6
        on right: 2 5
    fun (40)
        on left: 7
        on right: 5 6
    po (41)
        on left: 8
        on right: 9 10
    fun_head <string_value> (42)
        on left: 9 10
        on right: 7
    params (43)
        on left: 11 12
        on right: 10 11
    vir (44)
        on left: 13
        on right: 11 22
    fun_body (45)
        on left: 14
        on right: 7
    fao (46)
        on left: 15
        on right: 14
    faf (47)
        on left: 16
        on right: 14
    block (48)
        on left: 17
        on right: 14 31
    decl_list (49)
        on left: 18 19
        on right: 17 18
    decl (50)
        on left: 20
        on right: 3 18
    var_decl (51)
        on left: 21
        on right: 20
    vlist (52)
        on left: 22 23
        on right: 21 22
    type <type_value> (53)
        on left: 24
        on right: 7 11 12 21
    typename <type_value> (54)
        on left: 25 26 27
        on right: 24
    inst_list (55)
        on left: 28 29
        on right: 17 28
    pv (56)
        on left: 30
        on right: 32 33 34 37
    inst (57)
        on left: 31 32 33 34 35 36 37
        on right: 28 29 43 44 49
    ao (58)
        on left: 38
        on right: 31
    af (59)
        on left: 39
        on right: 31
    aff (60)
        on left: 40
        on right: 33
    ret (61)
        on left: 41 42
        on right: 34
    cond (62)
        on left: 43
        on right: 35
    elsop (63)
        on left: 44 45
        on right: 43
    bool_cond (64)
        on left: 46
        on right: 43
    if (65)
        on left: 47
        on right: 43
    else (66)
        on left: 48
        on right: 44
    loop (67)
        on left: 49
        on right: 36
    while_cond (68)
        on left: 50
        on right: 49
    while (69)
        on left: 51
        on right: 49
    exp <type_value> (70)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
        on right: 32 40 41 46 50 52 53 54 55 56 57 62 63 64 65 66 67 68 73 74
    app (71)
        on left: 69
        on right: 59
    fid (72)
        on left: 70
        on right: 69
    args (73)
        on left: 71 72
        on right: 69
    arglist (74)
        on left: 73 74
        on right: 71 73


State 0

    0 $accept: • prog $end

    $default  reduce using rule 4 (glob_var_list)

    prog            go to state 1
    glob_decl_list  go to state 2
    glob_var_list   go to state 3


State 1

    0 $accept: prog • $end

    $end  shift, and go to state 4


State 2

    1 prog: glob_decl_list •

    $default  reduce using rule 1 (prog)


State 3

    2 glob_decl_list: glob_var_list • glob_fun_list
    3 glob_var_list: glob_var_list • decl PV

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6
    VOID   shift, and go to state 7

    glob_fun_list  go to state 8
    fun            go to state 9
    decl           go to state 10
    var_decl       go to state 11
    type           go to state 12
    typename       go to state 13


State 4

    0 $accept: prog $end •

    $default  accept


State 5

   25 typename: INT •

    $default  reduce using rule 25 (typename)


State 6

   26 typename: FLOAT •

    $default  reduce using rule 26 (typename)


State 7

   27 typename: VOID •

    $default  reduce using rule 27 (typename)


State 8

    2 glob_decl_list: glob_var_list glob_fun_list •
    5 glob_fun_list: glob_fun_list • fun

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6
    VOID   shift, and go to state 7

    $default  reduce using rule 2 (glob_decl_list)

    fun       go to state 14
    type      go to state 15
    typename  go to state 13


State 9

    6 glob_fun_list: fun •

    $default  reduce using rule 6 (glob_fun_list)


State 10

    3 glob_var_list: glob_var_list decl • PV

    PV  shift, and go to state 16


State 11

   20 decl: var_decl •

    $default  reduce using rule 20 (decl)


State 12

    7 fun: type • fun_head fun_body
   21 var_decl: type • vlist

    ID  shift, and go to state 17

    fun_head  go to state 18
    vlist     go to state 19


State 13

   24 type: typename •

    $default  reduce using rule 24 (type)


State 14

    5 glob_fun_list: glob_fun_list fun •

    $default  reduce using rule 5 (glob_fun_list)


State 15

    7 fun: type • fun_head fun_body

    ID  shift, and go to state 20

    fun_head  go to state 18


State 16

    3 glob_var_list: glob_var_list decl PV •

    $default  reduce using rule 3 (glob_var_list)


State 17

    9 fun_head: ID • po PF
   10         | ID • po params PF
   23 vlist: ID •

    PO  shift, and go to state 21

    $default  reduce using rule 23 (vlist)

    po  go to state 22


State 18

    7 fun: type fun_head • fun_body

    AO  shift, and go to state 23

    fun_body  go to state 24
    fao       go to state 25


State 19

   21 var_decl: type vlist •
   22 vlist: vlist • vir ID

    VIR  shift, and go to state 26

    $default  reduce using rule 21 (var_decl)

    vir  go to state 27


State 20

    9 fun_head: ID • po PF
   10         | ID • po params PF

    PO  shift, and go to state 21

    po  go to state 22


State 21

    8 po: PO •

    $default  reduce using rule 8 (po)


State 22

    9 fun_head: ID po • PF
   10         | ID po • params PF

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6
    VOID   shift, and go to state 7
    PF     shift, and go to state 28

    params    go to state 29
    type      go to state 30
    typename  go to state 13


State 23

   15 fao: AO •

    $default  reduce using rule 15 (fao)


State 24

    7 fun: type fun_head fun_body •

    $default  reduce using rule 7 (fun)


State 25

   14 fun_body: fao • block faf

    $default  reduce using rule 19 (decl_list)

    block      go to state 31
    decl_list  go to state 32


State 26

   13 vir: VIR •

    $default  reduce using rule 13 (vir)


State 27

   22 vlist: vlist vir • ID

    ID  shift, and go to state 33


State 28

    9 fun_head: ID po PF •

    $default  reduce using rule 9 (fun_head)


State 29

   10 fun_head: ID po params • PF

    PF  shift, and go to state 34


State 30

   11 params: type • ID vir params
   12       | type • ID

    ID  shift, and go to state 35


State 31

   14 fun_body: fao block • faf

    AF  shift, and go to state 36

    faf  go to state 37


State 32

   17 block: decl_list • inst_list
   18 decl_list: decl_list • decl PV

    NUM     shift, and go to state 38
    DEC     shift, and go to state 39
    INT     shift, and go to state 5
    FLOAT   shift, and go to state 6
    VOID    shift, and go to state 7
    ID      shift, and go to state 40
    AO      shift, and go to state 41
    PO      shift, and go to state 42
    PV      shift, and go to state 43
    RETURN  shift, and go to state 44
    IF      shift, and go to state 45
    WHILE   shift, and go to state 46
    NOT     shift, and go to state 47
    MOINS   shift, and go to state 48

    decl       go to state 49
    var_decl   go to state 11
    type       go to state 50
    typename   go to state 13
    inst_list  go to state 51
    pv         go to state 52
    inst       go to state 53
    ao         go to state 54
    aff        go to state 55
    ret        go to state 56
    cond       go to state 57
    if         go to state 58
    loop       go to state 59
    while      go to state 60
    exp        go to state 61
    app        go to state 62
    fid        go to state 63


State 33

   22 vlist: vlist vir ID •

    $default  reduce using rule 22 (vlist)


State 34

   10 fun_head: ID po params PF •

    $default  reduce using rule 10 (fun_head)


State 35

   11 params: type ID • vir params
   12       | type ID •

    VIR  shift, and go to state 26

    $default  reduce using rule 12 (params)

    vir  go to state 64


State 36

   16 faf: AF •

    $default  reduce using rule 16 (faf)


State 37

   14 fun_body: fao block faf •

    $default  reduce using rule 14 (fun_body)


State 38

   60 exp: NUM •

    $default  reduce using rule 60 (exp)


State 39

   61 exp: DEC •

    $default  reduce using rule 61 (exp)


State 40

   40 aff: ID • EQ exp
   58 exp: ID •
   70 fid: ID •

    EQ  shift, and go to state 65

    PO        reduce using rule 70 (fid)
    $default  reduce using rule 58 (exp)


State 41

   38 ao: AO •

    $default  reduce using rule 38 (ao)


State 42

   57 exp: PO • exp PF

    NUM    shift, and go to state 38
    DEC    shift, and go to state 39
    ID     shift, and go to state 66
    PO     shift, and go to state 42
    NOT    shift, and go to state 47
    MOINS  shift, and go to state 48

    exp  go to state 67
    app  go to state 62
    fid  go to state 63


State 43

   30 pv: PV •

    $default  reduce using rule 30 (pv)


State 44

   41 ret: RETURN • exp
   42    | RETURN • PO PF

    NUM    shift, and go to state 38
    DEC    shift, and go to state 39
    ID     shift, and go to state 66
    PO     shift, and go to state 68
    NOT    shift, and go to state 47
    MOINS  shift, and go to state 48

    exp  go to state 69
    app  go to state 62
    fid  go to state 63


State 45

   47 if: IF •

    $default  reduce using rule 47 (if)


State 46

   51 while: WHILE •

    $default  reduce using rule 51 (while)


State 47

   62 exp: NOT • exp

    NUM    shift, and go to state 38
    DEC    shift, and go to state 39
    ID     shift, and go to state 66
    PO     shift, and go to state 42
    NOT    shift, and go to state 47
    MOINS  shift, and go to state 48

    exp  go to state 70
    app  go to state 62
    fid  go to state 63


State 48

   52 exp: MOINS • exp

    NUM    shift, and go to state 38
    DEC    shift, and go to state 39
    ID     shift, and go to state 66
    PO     shift, and go to state 42
    NOT    shift, and go to state 47
    MOINS  shift, and go to state 48

    exp  go to state 71
    app  go to state 62
    fid  go to state 63


State 49

   18 decl_list: decl_list decl • PV

    PV  shift, and go to state 72


State 50

   21 var_decl: type • vlist

    ID  shift, and go to state 73

    vlist  go to state 19


State 51

   17 block: decl_list inst_list •
   28 inst_list: inst_list • inst

    NUM     shift, and go to state 38
    DEC     shift, and go to state 39
    ID      shift, and go to state 40
    AO      shift, and go to state 41
    PO      shift, and go to state 42
    PV      shift, and go to state 43
    RETURN  shift, and go to state 44
    IF      shift, and go to state 45
    WHILE   shift, and go to state 46
    NOT     shift, and go to state 47
    MOINS   shift, and go to state 48

    $default  reduce using rule 17 (block)

    pv     go to state 52
    inst   go to state 74
    ao     go to state 54
    aff    go to state 55
    ret    go to state 56
    cond   go to state 57
    if     go to state 58
    loop   go to state 59
    while  go to state 60
    exp    go to state 61
    app    go to state 62
    fid    go to state 63


State 52

   37 inst: pv •

    $default  reduce using rule 37 (inst)


State 53

   29 inst_list: inst •

    $default  reduce using rule 29 (inst_list)


State 54

   31 inst: ao • block af

    $default  reduce using rule 19 (decl_list)

    block      go to state 75
    decl_list  go to state 32


State 55

   33 inst: aff • pv

    PV  shift, and go to state 43

    pv  go to state 76


State 56

   34 inst: ret • pv

    PV  shift, and go to state 43

    pv  go to state 77


State 57

   35 inst: cond •

    $default  reduce using rule 35 (inst)


State 58

   43 cond: if • bool_cond inst elsop

    PO  shift, and go to state 78

    bool_cond  go to state 79


State 59

   36 inst: loop •

    $default  reduce using rule 36 (inst)


State 60

   49 loop: while • while_cond inst

    PO  shift, and go to state 80

    while_cond  go to state 81


State 61

   32 inst: exp • pv
   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    PV     shift, and go to state 43
    AND    shift, and go to state 82
    OR     shift, and go to state 83
    DIFF   shift, and go to state 84
    EQUAL  shift, and go to state 85
    SUP    shift, and go to state 86
    INF    shift, and go to state 87
    PLUS   shift, and go to state 88
    MOINS  shift, and go to state 89
    STAR   shift, and go to state 90
    DIV    shift, and go to state 91

    pv  go to state 92


State 62

   59 exp: app •

    $default  reduce using rule 59 (exp)


State 63

   69 app: fid • PO args PF

    PO  shift, and go to state 93


State 64

   11 params: type ID vir • params

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6
    VOID   shift, and go to state 7

    params    go to state 94
    type      go to state 30
    typename  go to state 13


State 65

   40 aff: ID EQ • exp

    NUM    shift, and go to state 38
    DEC    shift, and go to state 39
    ID     shift, and go to state 66
    PO     shift, and go to state 42
    NOT    shift, and go to state 47
    MOINS  shift, and go to state 48

    exp  go to state 95
    app  go to state 62
    fid  go to state 63


State 66

   58 exp: ID •
   70 fid: ID •

    PO        reduce using rule 70 (fid)
    $default  reduce using rule 58 (exp)


State 67

   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   57    | PO exp • PF
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    PF     shift, and go to state 96
    AND    shift, and go to state 82
    OR     shift, and go to state 83
    DIFF   shift, and go to state 84
    EQUAL  shift, and go to state 85
    SUP    shift, and go to state 86
    INF    shift, and go to state 87
    PLUS   shift, and go to state 88
    MOINS  shift, and go to state 89
    STAR   shift, and go to state 90
    DIV    shift, and go to state 91


State 68

   42 ret: RETURN PO • PF
   57 exp: PO • exp PF

    NUM    shift, and go to state 38
    DEC    shift, and go to state 39
    ID     shift, and go to state 66
    PO     shift, and go to state 42
    PF     shift, and go to state 97
    NOT    shift, and go to state 47
    MOINS  shift, and go to state 48

    exp  go to state 67
    app  go to state 62
    fid  go to state 63


State 69

   41 ret: RETURN exp •
   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    AND    shift, and go to state 82
    OR     shift, and go to state 83
    DIFF   shift, and go to state 84
    EQUAL  shift, and go to state 85
    SUP    shift, and go to state 86
    INF    shift, and go to state 87
    PLUS   shift, and go to state 88
    MOINS  shift, and go to state 89
    STAR   shift, and go to state 90
    DIV    shift, and go to state 91

    $default  reduce using rule 41 (ret)


State 70

   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   62    | NOT exp •
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    $default  reduce using rule 62 (exp)


State 71

   52 exp: MOINS exp •
   53    | exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    $default  reduce using rule 52 (exp)


State 72

   18 decl_list: decl_list decl PV •

    $default  reduce using rule 18 (decl_list)


State 73

   23 vlist: ID •

    $default  reduce using rule 23 (vlist)


State 74

   28 inst_list: inst_list inst •

    $default  reduce using rule 28 (inst_list)


State 75

   31 inst: ao block • af

    AF  shift, and go to state 98

    af  go to state 99


State 76

   33 inst: aff pv •

    $default  reduce using rule 33 (inst)


State 77

   34 inst: ret pv •

    $default  reduce using rule 34 (inst)


State 78

   46 bool_cond: PO • exp PF

    NUM    shift, and go to state 38
    DEC    shift, and go to state 39
    ID     shift, and go to state 66
    PO     shift, and go to state 42
    NOT    shift, and go to state 47
    MOINS  shift, and go to state 48

    exp  go to state 100
    app  go to state 62
    fid  go to state 63


State 79

   43 cond: if bool_cond • inst elsop

    NUM     shift, and go to state 38
    DEC     shift, and go to state 39
    ID      shift, and go to state 40
    AO      shift, and go to state 41
    PO      shift, and go to state 42
    PV      shift, and go to state 43
    RETURN  shift, and go to state 44
    IF      shift, and go to state 45
    WHILE   shift, and go to state 46
    NOT     shift, and go to state 47
    MOINS   shift, and go to state 48

    pv     go to state 52
    inst   go to state 101
    ao     go to state 54
    aff    go to state 55
    ret    go to state 56
    cond   go to state 57
    if     go to state 58
    loop   go to state 59
    while  go to state 60
    exp    go to state 61
    app    go to state 62
    fid    go to state 63


State 80

   50 while_cond: PO • exp PF

    NUM    shift, and go to state 38
    DEC    shift, and go to state 39
    ID     shift, and go to state 66
    PO     shift, and go to state 42
    NOT    shift, and go to state 47
    MOINS  shift, and go to state 48

    exp  go to state 102
    app  go to state 62
    fid  go to state 63


State 81

   49 loop: while while_cond • inst

    NUM     shift, and go to state 38
    DEC     shift, and go to state 39
    ID      shift, and go to state 40
    AO      shift, and go to state 41
    PO      shift, and go to state 42
    PV      shift, and go to state 43
    RETURN  shift, and go to state 44
    IF      shift, and go to state 45
    WHILE   shift, and go to state 46
    NOT     shift, and go to state 47
    MOINS   shift, and go to state 48

    pv     go to state 52
    inst   go to state 103
    ao     go to state 54
    aff    go to state 55
    ret    go to state 56
    cond   go to state 57
    if     go to state 58
    loop   go to state 59
    while  go to state 60
    exp    go to state 61
    app    go to state 62
    fid    go to state 63


State 82

   67 exp: exp AND • exp

    NUM    shift, and go to state 38
    DEC    shift, and go to state 39
    ID     shift, and go to state 66
    PO     shift, and go to state 42
    NOT    shift, and go to state 47
    MOINS  shift, and go to state 48

    exp  go to state 104
    app  go to state 62
    fid  go to state 63


State 83

   68 exp: exp OR • exp

    NUM    shift, and go to state 38
    DEC    shift, and go to state 39
    ID     shift, and go to state 66
    PO     shift, and go to state 42
    NOT    shift, and go to state 47
    MOINS  shift, and go to state 48

    exp  go to state 105
    app  go to state 62
    fid  go to state 63


State 84

   66 exp: exp DIFF • exp

    NUM    shift, and go to state 38
    DEC    shift, and go to state 39
    ID     shift, and go to state 66
    PO     shift, and go to state 42
    NOT    shift, and go to state 47
    MOINS  shift, and go to state 48

    exp  go to state 106
    app  go to state 62
    fid  go to state 63


State 85

   65 exp: exp EQUAL • exp

    NUM    shift, and go to state 38
    DEC    shift, and go to state 39
    ID     shift, and go to state 66
    PO     shift, and go to state 42
    NOT    shift, and go to state 47
    MOINS  shift, and go to state 48

    exp  go to state 107
    app  go to state 62
    fid  go to state 63


State 86

   64 exp: exp SUP • exp

    NUM    shift, and go to state 38
    DEC    shift, and go to state 39
    ID     shift, and go to state 66
    PO     shift, and go to state 42
    NOT    shift, and go to state 47
    MOINS  shift, and go to state 48

    exp  go to state 108
    app  go to state 62
    fid  go to state 63


State 87

   63 exp: exp INF • exp

    NUM    shift, and go to state 38
    DEC    shift, and go to state 39
    ID     shift, and go to state 66
    PO     shift, and go to state 42
    NOT    shift, and go to state 47
    MOINS  shift, and go to state 48

    exp  go to state 109
    app  go to state 62
    fid  go to state 63


State 88

   53 exp: exp PLUS • exp

    NUM    shift, and go to state 38
    DEC    shift, and go to state 39
    ID     shift, and go to state 66
    PO     shift, and go to state 42
    NOT    shift, and go to state 47
    MOINS  shift, and go to state 48

    exp  go to state 110
    app  go to state 62
    fid  go to state 63


State 89

   54 exp: exp MOINS • exp

    NUM    shift, and go to state 38
    DEC    shift, and go to state 39
    ID     shift, and go to state 66
    PO     shift, and go to state 42
    NOT    shift, and go to state 47
    MOINS  shift, and go to state 48

    exp  go to state 111
    app  go to state 62
    fid  go to state 63


State 90

   55 exp: exp STAR • exp

    NUM    shift, and go to state 38
    DEC    shift, and go to state 39
    ID     shift, and go to state 66
    PO     shift, and go to state 42
    NOT    shift, and go to state 47
    MOINS  shift, and go to state 48

    exp  go to state 112
    app  go to state 62
    fid  go to state 63


State 91

   56 exp: exp DIV • exp

    NUM    shift, and go to state 38
    DEC    shift, and go to state 39
    ID     shift, and go to state 66
    PO     shift, and go to state 42
    NOT    shift, and go to state 47
    MOINS  shift, and go to state 48

    exp  go to state 113
    app  go to state 62
    fid  go to state 63


State 92

   32 inst: exp pv •

    $default  reduce using rule 32 (inst)


State 93

   69 app: fid PO • args PF

    NUM    shift, and go to state 38
    DEC    shift, and go to state 39
    ID     shift, and go to state 66
    PO     shift, and go to state 42
    NOT    shift, and go to state 47
    MOINS  shift, and go to state 48

    $default  reduce using rule 72 (args)

    exp      go to state 114
    app      go to state 62
    fid      go to state 63
    args     go to state 115
    arglist  go to state 116


State 94

   11 params: type ID vir params •

    $default  reduce using rule 11 (params)


State 95

   40 aff: ID EQ exp •
   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    AND    shift, and go to state 82
    OR     shift, and go to state 83
    DIFF   shift, and go to state 84
    EQUAL  shift, and go to state 85
    SUP    shift, and go to state 86
    INF    shift, and go to state 87
    PLUS   shift, and go to state 88
    MOINS  shift, and go to state 89
    STAR   shift, and go to state 90
    DIV    shift, and go to state 91

    $default  reduce using rule 40 (aff)


State 96

   57 exp: PO exp PF •

    $default  reduce using rule 57 (exp)


State 97

   42 ret: RETURN PO PF •

    $default  reduce using rule 42 (ret)


State 98

   39 af: AF •

    $default  reduce using rule 39 (af)


State 99

   31 inst: ao block af •

    $default  reduce using rule 31 (inst)


State 100

   46 bool_cond: PO exp • PF
   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    PF     shift, and go to state 117
    AND    shift, and go to state 82
    OR     shift, and go to state 83
    DIFF   shift, and go to state 84
    EQUAL  shift, and go to state 85
    SUP    shift, and go to state 86
    INF    shift, and go to state 87
    PLUS   shift, and go to state 88
    MOINS  shift, and go to state 89
    STAR   shift, and go to state 90
    DIV    shift, and go to state 91


State 101

   43 cond: if bool_cond inst • elsop

    ELSE  shift, and go to state 118

    $default  reduce using rule 45 (elsop)

    elsop  go to state 119
    else   go to state 120


State 102

   50 while_cond: PO exp • PF
   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    PF     shift, and go to state 121
    AND    shift, and go to state 82
    OR     shift, and go to state 83
    DIFF   shift, and go to state 84
    EQUAL  shift, and go to state 85
    SUP    shift, and go to state 86
    INF    shift, and go to state 87
    PLUS   shift, and go to state 88
    MOINS  shift, and go to state 89
    STAR   shift, and go to state 90
    DIV    shift, and go to state 91


State 103

   49 loop: while while_cond inst •

    $default  reduce using rule 49 (loop)


State 104

   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   67    | exp AND exp •
   68    | exp • OR exp

    DIFF   shift, and go to state 84
    EQUAL  shift, and go to state 85
    SUP    shift, and go to state 86
    INF    shift, and go to state 87
    PLUS   shift, and go to state 88
    MOINS  shift, and go to state 89
    STAR   shift, and go to state 90
    DIV    shift, and go to state 91

    $default  reduce using rule 67 (exp)


State 105

   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp
   68    | exp OR exp •

    AND    shift, and go to state 82
    DIFF   shift, and go to state 84
    EQUAL  shift, and go to state 85
    SUP    shift, and go to state 86
    INF    shift, and go to state 87
    PLUS   shift, and go to state 88
    MOINS  shift, and go to state 89
    STAR   shift, and go to state 90
    DIV    shift, and go to state 91

    $default  reduce using rule 68 (exp)


State 106

   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   66    | exp DIFF exp •
   67    | exp • AND exp
   68    | exp • OR exp

    PLUS   shift, and go to state 88
    MOINS  shift, and go to state 89
    STAR   shift, and go to state 90
    DIV    shift, and go to state 91

    $default  reduce using rule 66 (exp)


State 107

   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   65    | exp EQUAL exp •
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    PLUS   shift, and go to state 88
    MOINS  shift, and go to state 89
    STAR   shift, and go to state 90
    DIV    shift, and go to state 91

    $default  reduce using rule 65 (exp)


State 108

   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   64    | exp SUP exp •
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    PLUS   shift, and go to state 88
    MOINS  shift, and go to state 89
    STAR   shift, and go to state 90
    DIV    shift, and go to state 91

    $default  reduce using rule 64 (exp)


State 109

   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   63    | exp INF exp •
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    PLUS   shift, and go to state 88
    MOINS  shift, and go to state 89
    STAR   shift, and go to state 90
    DIV    shift, and go to state 91

    $default  reduce using rule 63 (exp)


State 110

   53 exp: exp • PLUS exp
   53    | exp PLUS exp •
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    STAR  shift, and go to state 90
    DIV   shift, and go to state 91

    $default  reduce using rule 53 (exp)


State 111

   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   54    | exp MOINS exp •
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    STAR  shift, and go to state 90
    DIV   shift, and go to state 91

    $default  reduce using rule 54 (exp)


State 112

   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   55    | exp STAR exp •
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    $default  reduce using rule 55 (exp)


State 113

   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   56    | exp DIV exp •
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp

    $default  reduce using rule 56 (exp)


State 114

   53 exp: exp • PLUS exp
   54    | exp • MOINS exp
   55    | exp • STAR exp
   56    | exp • DIV exp
   63    | exp • INF exp
   64    | exp • SUP exp
   65    | exp • EQUAL exp
   66    | exp • DIFF exp
   67    | exp • AND exp
   68    | exp • OR exp
   74 arglist: exp •

    AND    shift, and go to state 82
    OR     shift, and go to state 83
    DIFF   shift, and go to state 84
    EQUAL  shift, and go to state 85
    SUP    shift, and go to state 86
    INF    shift, and go to state 87
    PLUS   shift, and go to state 88
    MOINS  shift, and go to state 89
    STAR   shift, and go to state 90
    DIV    shift, and go to state 91

    $default  reduce using rule 74 (arglist)


State 115

   69 app: fid PO args • PF

    PF  shift, and go to state 122


State 116
